# RedMA

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  config_example.sh  get_meshes.sh  index.md
cases/RossEthierSteinmanBenchmark/: CMakeLists.txt  RossEthierSteinmanBenchmark.cpp  RossEthierSteinmanDec.cpp  RossEthierSteinmanDec.hpp  RossEthierSteinmanSolution.hpp  SolverParamList2.xml  run_convergence.sh  solversOptionsFast.xml
core/: CMakeLists.txt
core/geometric_structure/: BifurcationSymmetric.cpp  BifurcationSymmetric.hpp  BuildingBlock.cpp  BuildingBlock.hpp  GeometricParametersHandler.cpp  GeometryParser.cpp  GeometryPrinter.cpp  SegmentationParser.hpp  SegmentationsMerger.cpp  TreeStructure.hpp  Tube.hpp
core/solver/: CMakeLists.txt
core/utils/: PrintLog.cpp
examples/: CMakeLists.txt  InstantiateTube.cpp  Playground.cpp  ReadXML.cpp
examples/3pipes/: 3pipes_checkmdeim.cpp  3pipes_femvsrb.cpp  3pipes_generatebasis.cpp  3pipes_mdeim.cpp  3pipes_online.cpp  3pipes_reference.cpp  3pipes_snapshots.cpp  3pipes_snapshotsdeim.cpp  CMakeLists.txt
examples/AortaComplex/: AortaBifurcation0.cpp  AortaBifurcation0.hpp  AortaComplex.cpp  AortaComplex_snapshots.cpp  CMakeLists.txt
examples/AortaIliac/: AortaIliac.cpp  AortaIliac_online.cpp  CMakeLists.txt
examples/AortaMeshing/: AortaMeshing.cpp  CMakeLists.txt
examples/AortaPortion/: AortaPortion_checkmdeim.cpp  AortaPortion_dumpsnapshots.cpp  AortaPortion_exportbasisfunctions.cpp  AortaPortion_femvsrb.cpp  AortaPortion_generatebasis.cpp  AortaPortion_generatematrices.cpp  AortaPortion_generatematricesforbasis.cpp  AortaPortion_mdeim.cpp  AortaPortion_online.cpp  AortaPortion_reference.cpp  AortaPortion_snapshots.cpp  AortaPortion_snapshotsdeim.cpp  AortaPortion_transformsnapshotspiola.cpp  CMakeLists.txt
examples/BendBifurcation/: BendBifurcation.cpp  CMakeLists.txt
examples/BentPipeBenchmark/: BentPipeBenchmark.cpp  CMakeLists.txt  data  solversOptionsFast.xml  tree2.xml  tree2_.xml
examples/BypassExample/: .BypassExample.cpp.swp  BypassExample.cpp  Bypass_generatematrices.cpp  Bypass_snapshots.cpp  CMakeLists.txt
examples/ConvertSegmentation/: CMakeLists.txt  ConvertSegmentation.cpp
examples/CoronaryExample/: CMakeLists.txt  CoronaryExample.cpp  data  tree2.xml
examples/ExportImportXML/: CMakeLists.txt  ExportImportXML.cpp  SolverParamList.xml
examples/FSINavierStokesExample/: CMakeLists.txt  FSINavierStokesExample.cpp
examples/MembraneModelBenchmark/: CMakeLists.txt  MembraneModelBenchmark.cpp
examples/NavierStokesExample/: CMakeLists.txt  NavierStokesExample.cpp  NavierStokesExample.sublime-workspace  analyzelogs.py  data  launch.py  open_all_vtks_paraview.py  solversOptionsFast.xml  tree.xml  tree1.xml  tree10.xml  tree11.xml  tree12.xml  tree13.xml  tree14.xml  tree15.xml  tree2.xml  tree3.xml  tree4.xml  tree5.xml  tree6.xml  tree7.xml  tree8.xml  tree9.xml  tree_.xml
examples/NavierStokesExample_/: CMakeLists.txt  NavierStokesExample.cpp
examples/NavierStokesNicholas/: CMakeLists.txt  NavierStokesNicholas.cpp  NavierStokesNicholas.sublime-workspace  NavierStokesNicholasImport.cpp  NavierStokesNicholas_gen.cpp  NavierStokesNicholas_handleNonlinearTerm.cpp  inflows.cpp  inflows.hpp
examples/RBNavierStokesSingleDomain/: CMakeLists.txt  RBNavierStokesSingleDomain.cpp
examples/RBPipelineSingleblock/: CMakeLists.txt  RBPipelineSingleblock_generatematrices.cpp  RBPipelineSingleblock_online.cpp  RBPipelineSingleblock_snapshots.cpp
examples/ReadXML/: CMakeLists.txt
examples/SaddlePointPreconditionerPerformance/: CMakeLists.txt  SaddlePointPreconditionerPerformance.cpp
examples/ShowcaseDeformation/: CmakeLists.txt  ShowcaseDeformation.cpp  data
examples/SteadyNavierStokesExample/: .~lock.CMakeLists.txt#  Bypass_SteadySnapshots.cpp  CMakeLists.txt  SteadyNavierStokesExample.cpp
examples/StokesExample/: CMakeLists.txt  StokesExample.cpp
examples/StraightPipeBenchmark/: CMakeLists.txt  StraightPipeBenchmark.cpp  data  solversOptionsFast.xml  tree2.xml  tree2_.xml
examples/data/: artery1.xml  artery2.xml  test.xml
examples/sample_data/: artery20pieces.xml
redma/: CMakeLists.txt  RedMA.hpp
redma/array/: BlockMaps.cpp  BlockMaps.hpp  BlockMaps_.hpp  BlockMatrix.cpp  BlockMatrix.hpp  BlockVector.cpp  BlockVector.hpp  CMakeLists.txt  Datatypes.hpp  DenseMatrix.cpp  DenseMatrix.hpp  DenseVector.cpp  DenseVector.hpp  DistributedVector.cpp  DistributedVector.hpp  Double.cpp  Double.hpp  DoubleMatrix.cpp  DoubleMatrix.hpp  DoubleVector.cpp  DoubleVector.hpp  SparseMatrix.cpp  SparseMatrix.hpp  TypesUtils.hpp  Wrap.cpp  Wrap.hpp  aDataWrapper.hpp  aMatrix.hpp  aVector.hpp
redma/assemblers/: AssemblerFactory.cpp  AssemblerFactory.hpp  CMakeLists.txt  DefaultAssemblersLibrary.cpp  DefaultAssemblersLibrary.hpp  DefaultAssemblersLibrary_imp.hpp  NavierStokesAssembler.hpp  NavierStokesAssembler_imp.hpp  StokesAssembler.hpp  StokesAssembler_imp.hpp
redma/boundary_conditions/: BCManager.cpp  BCManager.hpp  (+8 more)
solver/: AbstractAssembler.cpp  AbstractAssembler.hpp  BackwardEuler.hpp  BackwardEuler_imp.hpp  BasisFunctionFunctor.cpp  BasisFunctionFunctor.hpp  CMakeLists.txt  ChebyshevBasisFunction.cpp  ChebyshevBasisFunction.hpp  Coupler.cpp  Coupler.hpp  FourierBasisFunction.cpp  FourierBasisFunction.hpp  GlobalAssembler.cpp  GlobalAssembler.hpp  GlobalAssembler_imp.hpp  GlobalBlockMatrix.cpp  GlobalBlockMatrix.hpp  GlobalIdentityOperator.cpp  GlobalIdentityOperator.hpp  GlobalSIMPLEOperator.cpp  GlobalSIMPLEOperator.hpp  GlobalSIMPLEOperatorPseudoFSI.hpp  GlobalSolver.cpp  GlobalSolver.hpp  GlobalSolverOperator.cpp  GlobalSolverOperator.hpp  GlobalSolverPreconditionerOperator.hpp  GlobalSolver_imp.hpp  Interpolation.cpp  Interpolation.hpp  LinearSolver.cpp  LinearSolver.hpp  NavierStokesAssembler.cpp  NavierStokesAssembler.hpp  PseudoFSI.cpp  PseudoFSI.hpp  PseudoFSIAssembler.cpp  PseudoFSIAssembler.hpp  RosenbrockAlgorithm.hpp  (+9 more)
tests/: AtomicTest.cpp  AtomicTest.hpp  CMakeLists.txt  TestBifurcationSymmetric.cpp  TestGeometryParser.cpp  TestTreeStructure.cpp  TestTube.cpp  test_all.sh
(+678 files in other folders)
