add_executable(Playground Playground.cpp)
target_link_libraries(Playground ${LINKED_LIBRARIES})
target_include_directories(Playground PRIVATE ${HEADERS_DIRS})

add_subdirectory(ExportImportXML)
add_subdirectory(ReadXML)
add_subdirectory(ConvertSegmentation)
add_subdirectory(ShowcaseDeformation)
add_subdirectory(StokesExample)
add_subdirectory(NavierStokesExample)
add_subdirectory(SaddlePointPreconditionerPerformance)
add_subdirectory(AortaIliac)
