add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/array)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/assemblers)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/basis_functions)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/coupling)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/linear_solve)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/time_marching_algorithms)
